<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/nav_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_tareas"
            android:icon="@drawable/ic_list"
            android:title="@string/tareas"
            android:fontFamily="sans-serif-black"
            android:contentDescription="@string/tareas_desc"
            android:orderInCategory="1"/>

        <item
            android:id="@+id/nav_calendario"
            android:icon="@drawable/ic_calendar"
            android:title="@string/calendario"
            android:fontFamily="sans-serif-black"
            android:contentDescription="@string/calendario_desc"
            android:orderInCategory="2"/>

        <item
            android:id="@+id/nav_listas"
            android:icon="@drawable/ic_listas"
            android:title="@string/listas"
            android:fontFamily="sans-serif-black"
            android:contentDescription="@string/listas_desc"
            android:orderInCategory="3"/>
    </group>
</menu>
